@@ -36,12 +36,14 @@
  * -------
  * 11-Jul-2007 : Version 1 (DG);
  * 08-Apr-2008 : Fixed incorrect testEquals() method (DG);
- *
+ * 28-Oct-2011 : Cdded test for endless loop, # 3429707 (MH);
  */
 
 package org.jfree.chart.axis.junit;
 
+import java.awt.Graphics2D;
 import java.awt.geom.Rectangle2D;
+import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.ObjectInput;
@@ -55,6 +57,7 @@ import junit.framework.TestSuite;
 
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.JFreeChart;
+import org.jfree.chart.axis.AxisState;
 import org.jfree.chart.axis.LogAxis;
 import org.jfree.chart.plot.CategoryPlot;
 import org.jfree.chart.plot.PlotOrientation;
@@ -321,5 +324,18 @@ public class LogAxisTests extends TestCase {
     public void testTickMarksVisibleDefault() {
         LogAxis axis = new LogAxis("Log Axis");
         assertTrue(axis.isTickMarksVisible());
+    }
+    
+    /**
+     * Checks that a TickUnit with a size of 0 doesn't crash.
+     */
+    public void testrefreshTicksWithZeroTickUnit() {
+        LogAxis axis = new LogAxis();
+        AxisState state = new AxisState();
+        BufferedImage image = new BufferedImage(200, 100,
+                BufferedImage.TYPE_INT_ARGB);
+        Graphics2D g2 = image.createGraphics();
+        Rectangle2D area = new Rectangle2D.Double(0.0, 0.0, 200, 100);
+        axis.refreshTicks(g2, state, area, RectangleEdge.TOP);
     }
 }
